--- a/jogo/css/game.css
+++ b/jogo/css/game.css
@@ -1,7 +1,14 @@
 * {
+  
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
+  }
+
+
+  header{
+    
   }
   
   body {
@@ -26,6 +33,7 @@
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
+    
   }
   
   .memory-card {
