--- a/jogo/css/game.css
+++ b/jogo/css/game.css
@@ -8,6 +8,9 @@
 
 
   header{
+    margin: 100px;
+    text-align: center;
+
     
   }
   
@@ -15,18 +18,15 @@
     height: 100vh;
     display: flex;
     /* background: #060AB2; */
-    background: black
+    background: black;
     
   }
 
-.bt {
-
-}
 
 
   
   .memory-game {
-    float: right;
+    
     width: 640px;
     height: 640px;
     margin: auto;
